[package]
name = "sea-raft"
version = "0.1.0-alpha"
edition = "2021"
description = "Sea Raft is a game where you start with a raft and try to survive the waves of enemies."
repository = "https://github.com/AtHeartEngineer/Sea_Raft"
license = "MIT"
authors = ["AtHeartEngineer"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
